--- a/src/main/java/com/mycompany/software/administrativo/ventas/views/Login.form
+++ b/src/main/java/com/mycompany/software/administrativo/ventas/views/Login.form
@@ -77,7 +77,7 @@
       <SubComponents>
         <Component class="javax.swing.JLabel" name="jLabel1">
           <Properties>
-            <Property name="text" type="java.lang.String" value="Documennto"/>
+            <Property name="text" type="java.lang.String" value="Documento"/>
           </Properties>
         </Component>
         <Component class="javax.swing.JLabel" name="jLabel2">
