--- a/src/main/java/com/mycompany/software/administrativo/ventas/views/Login.form
+++ b/src/main/java/com/mycompany/software/administrativo/ventas/views/Login.form
@@ -86,6 +86,9 @@
           </Properties>
         </Component>
         <Component class="javax.swing.JTextField" name="documentInput">
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="documentInputActionPerformed"/>
+          </Events>
         </Component>
         <Component class="javax.swing.JTextField" name="passwordInput">
         </Component>
