--- a/src/main/java/com/mycompany/software/administrativo/ventas/views/Client.form
+++ b/src/main/java/com/mycompany/software/administrativo/ventas/views/Client.form
@@ -110,7 +110,7 @@
                       <EmptySpace pref="16" max="32767" attributes="0"/>
                       <Component id="searchVarUsers" min="-2" max="-2" attributes="0"/>
                       <EmptySpace type="separate" max="-2" attributes="0"/>
-                      <Component id="jScrollPane1" min="-2" max="-2" attributes="0"/>
+                      <Component id="jScrollPane1" min="-2" pref="427" max="-2" attributes="0"/>
                       <EmptySpace max="-2" attributes="0"/>
                   </Group>
               </Group>
